--- a/sw-security/app/css/index.module.css
+++ b/sw-security/app/css/index.module.css
@@ -11,13 +11,14 @@
   box-shadow: inset 0 0 0.83rem 0.2rem rgba(203, 98, 255, 0.4);
   border-radius: 23%;
   margin-top: 1.6rem;
+  z-index: 10;
 }
 .logoContainer::before {
   content: "";
   position: absolute;
   inset: 0;
   border-radius: 23%;
-  background-color: #0d0d0d;
+  /* background-color: #0d0d0d; */
   padding: 0.06rem;
   background: linear-gradient(
     to bottom,
@@ -35,7 +36,7 @@
   height: 19vh; */
   width: 9.4rem;
   height: 9.4rem;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   border-radius: 20%;
 }
 .startPoint {
@@ -99,12 +100,16 @@
 .name {
   font-size: 4.45rem;
   color: #cb62ff;
+  color: white;
   font-weight: bold;
+  letter-spacing: 0.3rem;
+  text-shadow: 0 0 10px #cb62ff, 0 0 20px #cb62ff, 0 0 40px #cb62ff,
+    0 0 80px #cb62ff;
 }
 .introContainer {
   margin-top: 0.56rem;
   text-align: center;
-  width: 45vw;
+  width: 14.3rem;
   z-index: 1;
 }
 .intro {
@@ -112,7 +117,23 @@
   font-weight: 500;
   font-size: 1.1rem;
   line-height: 1.6rem;
+  word-wrap: break-word;
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  /* border-right: 2px solid white; */
+  animation: typing 3s steps(20) infinite alternate-reverse;
 }
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
 .startBtnContainer {
   /* width: 7.3vw; */
   width: 7.5rem;
