--- a/sw-security/app/css/signup.module.css
+++ b/sw-security/app/css/signup.module.css
@@ -81,6 +81,7 @@ input::placeholder {
 .emailDiv,
 .emailAuthDiv,
 .phoneNumberDiv,
+.phoneAuthDiv,
 .passwordDiv,
 .passwordConfirmDiv,
 .companyDiv,
@@ -143,7 +144,7 @@ input::placeholder {
 .emailDiv div,
 .emailAuthDiv div,
 .phoneNumberDiv div,
-.emailAuthDiv div {
+.phoneAuthDiv div {
   display: flex;
   flex-direction: row;
 }
