--- a/sw-security/app/css/styles.module.css
+++ b/sw-security/app/css/styles.module.css
@@ -4,3 +4,14 @@ html {
 a {
   text-decoration: none;
 }
+
+/* @media (max-width: 768px) {
+  html {
+    font-size: 14px;
+  }
+}
+@media (max-width: 480px) {
+  html {
+    font-size: 10px;
+  }
+} */
