SCRUM-70 로그인 여부에 따라 route 설정 완료, 최근 대화기록 불러오기 완료

--- a/sw-security/app/css/modal.module.css
+++ b/sw-security/app/css/modal.module.css
@@ -67,7 +67,7 @@
 }
 .modalBtn {
   border: none;
-  background-color: #2a2c2f;
+  /* background-color: #2a2c2f; */
   width: 6.67rem;
   height: 2.8rem;
   border-radius: 0.7rem;
