SCRUM-74 학습파일 제출 시 로딩창, 아무것도 안 넣으면 제출 불가

--- a/sw-security/app/css/admin.module.css
+++ b/sw-security/app/css/admin.module.css
@@ -370,6 +370,7 @@ textarea::placeholder {
   font-size: 1.2rem;
   font-weight: 600;
   transition: background-color 0.3s ease, transform 0.1s ease;
+  cursor: pointer;
 }
 
 .dataSubmitBtn:hover {
@@ -379,4 +380,46 @@ textarea::placeholder {
 .dataSubmitBtn:active {
   background-color: #1a1b1d;
   transform: scale(0.95);
+}
+.dataSubmitBtn:disabled {
+  cursor: default;
+  background-color: grey;
+}
+.dataSubmitBtn:disabled:hover,
+.dataSubmitBtn:disabled:active {
+  transform: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  /* display: flex;
+   justify-content: center; */
+  background: rgba(0, 0, 0, 0.5);
+  pointer-events: auto;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loadingIcon2 {
+  animation: spin 1s linear infinite;
+  color: #b7bdc7;
+  height: 10rem;
+  width: 10rem;
+  /* background-color: red; */
+  /* position: fixed;
+  top: 50%;
+  left: 50%; */
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
