--- a/sw-security/app/css/modal.module.css
+++ b/sw-security/app/css/modal.module.css
@@ -49,10 +49,23 @@
   align-items: center;
   /* background-color: red; */
 }
+.modalContent2 {
+  display: flex;
+  flex: 1;
+  padding-left: 1.1rem;
+  align-items: center;
+  /* background-color: red; */
+  justify-content: center;
+}
 .contentText {
   color: #484b50;
   font-size: 0.85rem;
   font-weight: 500;
+}
+.contentText2 {
+  color: #484b50;
+  font-size: 2rem;
+  font-weight: 600;
 }
 .modalBtnDiv {
   flex: 1;
