SCRUM-80 무한 스크롤 시 맨 밑으로 가는 현상 제거

--- a/sw-security/app/css/chatMain.module.css
+++ b/sw-security/app/css/chatMain.module.css
@@ -50,6 +50,7 @@
   /* background-color: blue; */
   padding-top: 1.7rem;
   /* border-bottom: 0.1rem #323232 solid; */
+  overflow-y: auto;
 }
 .bottomItemContainer {
   border-top: 0.1rem #323232 solid;
