--- a/sw-security/app/css/chatMain.module.css
+++ b/sw-security/app/css/chatMain.module.css
@@ -26,7 +26,7 @@
 .topItemContainer {
   display: flex;
   flex-direction: column;
-  height: 25%;
+  height: 12%;
   /* background-color: red; */
   justify-content: space-between;
   padding-bottom: 1.7rem;
@@ -46,7 +46,7 @@
 .chatHistoryConatainer {
   display: flex;
   flex-direction: column;
-  height: 60%;
+  height: 73%;
   /* background-color: blue; */
   padding-top: 1.7rem;
   /* border-bottom: 0.1rem #323232 solid; */
@@ -188,7 +188,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex: 1;
+  /* flex: 1; */
+  height: 3rem;
   border-top-left-radius: 0.67rem;
   border-top-right-radius: 0.67rem;
   background-color: #1b1c1e;
@@ -200,13 +201,16 @@
   font-size: 1.2rem;
 }
 .contentDiv {
-  flex: 4;
+  /* flex: 4; */
+  height: 13rem;
   border-bottom-left-radius: 0.67rem;
   border-bottom-right-radius: 0.67rem;
   background-color: #ffffff;
   border: 0.1rem #ececf2 solid;
   padding: 1rem;
   color: black;
+  text-overflow: ellipsis;
+  overflow: auto;
 }
 
 .trashIcon {
@@ -260,12 +264,13 @@
   font-weight: 500;
   margin-bottom: 1.1rem;
   word-wrap: break-word;
+  overflow: auto;
 }
 .user {
   background-color: #f4ddff;
   color: #0d0d0d;
   align-self: flex-end;
-  text-align: right;
+  text-align: left;
   border-top-left-radius: 1.7rem;
 }
 
@@ -322,4 +327,26 @@
   100% {
     transform: rotate(360deg);
   }
+}
+
+/* 기본 코드 스타일 */
+code {
+  /* font-family: "Courier New", monospace; */
+  background-color: #f5f5f5;
+  padding: 0.4rem 0.6rem;
+  border-radius: 0.3rem;
+  color: #333;
+}
+
+/* 코드 블록 스타일 */
+pre code {
+  display: block;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  background-color: #2d2d2d; /* ChatGPT처럼 어두운 배경 색상 */
+  color: #f8f8f2; /* ChatGPT처럼 밝은 텍스트 색상 */
+  padding: 1rem;
+  border-radius: 0.5rem;
+  margin: 1rem 0;
+  overflow-x: auto;
 }
