--- a/sw-security/app/css/modal.module.css
+++ b/sw-security/app/css/modal.module.css
@@ -55,7 +55,7 @@
   padding-left: 1.1rem;
   align-items: center;
   /* background-color: red; */
-  justify-content: center;
+  /* justify-content: center; */
 }
 .contentText {
   color: #484b50;
