media쿼리 사용, 배포 준비 완료

--- a/sw-security/app/css/styles.module.css
+++ b/sw-security/app/css/styles.module.css
@@ -5,7 +5,7 @@ a {
   text-decoration: none;
 }
 
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
   html {
     font-size: 14px;
   }
@@ -14,4 +14,4 @@ a {
   html {
     font-size: 10px;
   }
-} */
+}
