--- a/sw-security/app/css/styles.module.css
+++ b/sw-security/app/css/styles.module.css
@@ -1,4 +1,4 @@
-html {
+.html {
   font-size: 18px;
 }
 a {
@@ -6,12 +6,12 @@ a {
 }
 
 @media (max-width: 768px) {
-  html {
+  .html {
     font-size: 14px;
   }
 }
 @media (max-width: 480px) {
-  html {
+  .html {
     font-size: 10px;
   }
 }
